@@ -283,6 +283,9 @@ structure.
 @include stdio/sscanf.def
 
 @page
+@include stdio/stdio_ext.def
+
+@page
 @include stdio/swprintf.def
 
 @page
